lab05/demo/src/main/java/org/example/errors/TimeoutException.java
package org.example.errors;

public class TimeoutException {
}
